frontend/test/should_pass/param_002.grg
using attrib_model_001;

rule r (ni : NINT, nb : NBOOL, nf : NFLOAT, nd : NDOUBLE, ns : NSTRING) : (NINT, NINT, NSTRING) {
	pattern {
		if { ni.a == 1 && nb.a && nf.a != 42.0 && nd.a != 7.0 && ns.a == "Hi"; }
		zi : NINT;
		zzi : NINT;
	}
	modify {
		xi : NINT;
		delete(nf, nd, zzi);
		return (zi, xi,  ns);
	}
}

