frontend/test/should_fail/param_001.grg
using attrib_model_001;

rule r (ni : NINT, nb : NBOOL, nf : NFLOAT, nd : NDOUBLE, ns : NSTRING) : (NINT) {
	zi : NINT;
	ni;

	replace {
		xi : NINT;
		return (zi);
	}
}

